--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-serialize": "^0.7.2",
     "formik": "^2.1.4",
     "history": "^4.10.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
