--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.21",
     "react-hook-form": "^5.7.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
