--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "form-serialize": "^0.7.2",
     "formik": "^2.1.4",
     "history": "^4.10.1",
